# OpenPathNet

./: README.md  openpathnet-cpu.yml  openpathnet-gpu.yml  pyproject.toml  requirements.txt  setup.py
configs/: regions_config.yaml
data/: generated_scenes.txt  generation_stats.txt
data/raytracing_results/: batch_raytracing_results.json  raytracing_stats.txt
data/scenes/scene_33.934784_-118.168892/: scene.xml
data/scenes/scene_33.934784_-118.168892/mesh/: building_0.ply  building_1.ply  building_10.ply  building_11.ply  building_12.ply  building_13.ply  building_14.ply  building_15.ply  building_16.ply  building_17.ply  building_18.ply  building_19.ply  building_2.ply  building_20.ply  building_21.ply  building_22.ply  building_23.ply  building_24.ply  building_25.ply  building_26.ply  building_27.ply  building_28.ply  building_29.ply  building_3.ply  building_30.ply  building_31.ply  building_32.ply  building_33.ply  building_34.ply  building_35.ply  building_36.ply  building_37.ply  building_38.ply  building_39.ply  building_4.ply  building_40.ply  building_41.ply  building_42.ply  building_43.ply  building_44.ply  (+6 more)
data/scenes/scene_34.025879_-118.144931/: scene.xml
scripts/: cleanup.py  generate_scenes.py  run_raytracing.py
src/: batch_processor.py  config_manager.py  coordinate_generator.py  scene_manager.py
src/CLItool/: __init__.py  cli.py  core.py  utils.py
src/raytracer/: __init__.py  raytracing_manager.py  sionna_raytracer.py
src/utils/: file_utils.py  logging_utils.py
src/visualization/: __init__.py  heatmap_generator.py
(+55 files in other folders)
